Fixed clipping issue with notification dropdown and line seperator in main nav

--- a/public/assets/css/components.css
+++ b/public/assets/css/components.css
@@ -453,7 +453,7 @@
         background: rgba(255, 255, 255, 0.2);
         border-radius: 999px;
         height: 1.15rem;
-        width: 1rem;
+        width: 2px;
       }
     }
 
